--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "firebase": "^10.11.0",
     "i": "^0.3.7",
     "npm": "^10.5.2",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-animated-numbers": "^0.18.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
